# rust-serverless

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  docker-compose.yml  main.tf  notes.txt  package.json  ready.yaml  serverless.yml  template.yml
.github/workflows/: rust.yml
etc/: bath.json  bedford.json  birmingham.json  bradford.json  brighton.json  bristol.json  cambridge.json  canterbury.json  carlisle.json  chelmsford.json  chester.json  chichester.json  city+of+london.json  city+of+westminster.json  coventry.json  derby.json  durham.json  ely.json  exeter.json  gloucester.json  hereford.json  hull.json  lancaster.json  leeds.json  leicester.json  lichfield.json  lincoln.json  liverpool.json  london.json  manchester.json  newcastle+upon+tyne.json  norwich.json  nottingham.json  oxford.json  peterborough.json  plymouth.json  portsmouth.json  preston.json  ripon.json  salford.json  (+13 more)
infrastructure/: api_gateway.tf  config.tf  lambdas.tf  permissions.tf  retrieve_value_lambda.tf  storage.tf  store_event_lambda.tf  store_value_lambda.tf  terraform.tfvars  variables.tf
retrieve/: Cargo.toml
