[package]
name = "retrieve"
version = "0.1.0"
authors = ["Matt Brown <matt@ederoyd.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1.5"
simple-error = "^0.1"
